# pyramid

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  BFG_HISTORY.rst  BFG_HISTORY.txt  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  COPYRIGHT.txt  HACKING.txt  HISTORY.rst  HISTORY.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  RELEASING.txt  TODO.txt  abc.py  appveyor.yml  builddocs.sh  check_docs_url.py  contributing.md  coverage.sh  hacking-tox.ini  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_test.txt  rtd.txt  scaffoldtests.sh  setup.cfg  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-tests.yml
docs/: .gitignore  Makefile  TODO.txt  api.rst  authorintro.rst  build_book  changes.rst  conf.py  conventions.rst  convert_images.sh  copyright.rst  coversizing.py  debugging.rst  designdefense.rst  documentation-style-guide.rst  errata.rst  foreword.rst  glossary.rst  index.rst  latexindex.rst  make_book  make_epub  make_pdf  notes.txt  quick_tour.rst  quickref.rst  remake  style-guide.rst  thanks.rst  typographical-conventions.rst  upgrading-2.0.rst  whatsnew-1.0.rst  whatsnew-1.1.rst  whatsnew-1.10.rst  whatsnew-1.2.rst  whatsnew-1.3.rst  whatsnew-1.4.rst  whatsnew-1.5.rst  whatsnew-1.6.rst  whatsnew-1.7.rst  (+5 more)
docs/.static/: repoze.css  repoze_epub.css
docs/.templates/: layout.html
docs/_static/: nobile.css  pyramid.css  pyramid_request_processing.graffle  pyramid_router.graffle
docs/_themes/: README  pylons_theme_support.py
docs/api/: authentication.rst  authorization.rst  chameleon_text.rst  chameleon_zpt.rst  compat.rst  config.rst  configuration.rst  cookies.rst  csrf.rst  decorator.rst  events.rst  exceptions.rst  flash.rst  httpexceptions.rst  i18n.rst  index.rst  interfaces.rst  location.rst  paster.rst  path.rst  personality.rst  push.rst  registry.rst  renderers.rst  request.rst  resolver.rst  response.rst  router.rst  scaffolds.rst  scripting.rst  security.rst  session.rst  settings.rst  static.rst  template.rst  testing.rst  threadlocal.rst  traversal.rst  tweens.rst  url.rst  (+4 more)
docs/getting_started/: about_guide.rst  configuration.rst  databases.rst  forms.rst  gettingstarted.rst  index.rst  internationalization.rst  json.rst  pserve.rst  quick_glance.rst  routes.rst  scaffolds.rst  security.rst  sessions.rst  special_views.rst  static_assets.rst  templates.rst  testing.rst  top_ten.rst  views.rst
docs/modules/: index.rst  push.rst  router.rst  security.rst  template.rst
docs/narr/: advanced-features.rst  advconfig.rst  advfeatures.rst  assets.rst  commandline.rst  configuration.rst  contextfinding.rst  cookiecutters.rst  csrf.rst  declarative.rst  environment.rst  events.rst  extconfig.rst  extending.rst  firstapp.rst  flash.rst  forms.rst  handlers.rst  hellotraversal.py  hellotraversal.rst  helloworld.py  hooks.rst  hybrid.rst  i18n.rst  install.rst  introduction.rst  introspector.rst  logging.rst  models.rst  muchadoabouttraversal.rst  paste.rst  project.rst  renderers.rst  resourcelocation.rst  resources.rst  router.rst  scaffolding.rst  scanning.rst  security.rst  sessions.rst  (+16 more)
docs/pscripts/: index.rst  pcreate.rst  pdistreport.rst  prequest.rst  proutes.rst  (+4 more)
docs/tutorials/wiki/src/authorization/: development.ini  production.ini  pyproject.toml  setup.py  testing.ini
docs/tutorials/wiki/src/authorization/pyramidtut/: views.py
docs/tutorials/wiki/src/authorization/pyramidtut/templates/: edit.pt  view.pt
docs/tutorials/wiki/src/authorization/tutorial/: __init__.py  configure.zcml  login.py  models.py  run.py  security.py  tests.py  views.py
docs/tutorials/wiki/src/authorization/tutorial/models/: __init__.py
docs/tutorials/wiki/src/authorization/tutorial/templates/: edit.pt  layout.pt  login.pt  mytemplate.pt  view.pt
docs/tutorials/wiki/src/authorization/tutorial/views/: auth.py  default.py  notfound.py
docs/tutorials/wiki2/src/basiclayout/: MANIFEST.in  README.txt  development.ini  production.ini  pyproject.toml  setup.py  testing.ini
docs/tutorials/wiki2/src/basiclayout/pyramidtut/views/: default.py
docs/tutorials/wiki2/src/basiclayout/tests/: conftest.py  test_it.py
docs/tutorials/wiki2/src/basiclayout/tutorial/: __init__.py  models.py  tests.py  views.py
docs/tutorials/wiki2/src/basiclayout/tutorial/models/: __init__.py  mymodel.py
docs/tutorials/wiki2/src/basiclayout/tutorial/scripts/: initialize_db.py  initializedb.py  populate.py
docs/tutorials/wiki2/src/basiclayout/tutorial/templates/: layout.jinja2  mytemplate.jinja2  mytemplate.pt
docs/tutorials/wiki2/src/basiclayout/tutorial/templates/static/: pylons.css
docs/tutorials/wiki2/src/basiclayout/tutorial/views/: default.py
pyramid/: __init__.py  asset.py  authentication.py  authorization.py  cachebust.py  chameleon_text.py  chameleon_zpt.py  compat.py  config.py  configuration.py  cookies.py  csrf.py  decorator.py  deprecation.py  encode.py  events.py  exceptions.py  flash.py  httpexceptions.py  i18n.py  interfaces.py  location.py  log.py  mako_templating.py  paster.py  path.py  predicates.py  registry.py  renderers.py  request.py  resource.py  response.py  router.py  scripting.py  security.py  session.py  settings.py  static.py  testing.py  threadlocal.py  (+9 more)
tests/: __init__.py  test__pkg_resources.py  test_asset.py  test_authentication.py  test_authorization.py  test_compat.py  test_csrf.py  test_cwe407_regression.py  test_decorator.py  test_docs.py  test_encode.py  test_events.py  test_exceptions.py  test_httpexceptions.py  test_i18n.py  test_integration.py  test_location.py  test_paster.py  test_path.py  test_predicates.py  test_registry.py  test_renderers.py  test_request.py  test_resolver.py  test_response.py  test_router.py  test_scripting.py  test_security.py  test_session.py  test_settings.py  test_static.py  test_testing.py  test_threadlocal.py  test_traversal.py  test_tweens.py  test_url.py  test_urldispatch.py  test_util.py  test_view.py  test_viewderivers.py  (+1 more)
(+1543 files in other folders)
