[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pyramid"
version = "2.1a1"
description = "The Pyramid Web Framework, a Pylons project"

authors = [
  {name = "Chris McDonough, Agendaless Consulting", email = "pylons-discuss@googlegroups.com"},
]
license = "LicenseRef-Repoze-BSD-derived"
license-files = ["LICENSE.txt"]

readme = {file = "README.rst", content-type = "text/x-rst"}

requires-python = ">=3.10"
dependencies = [
    "hupper >= 1.5",  # ignore_files support
    "plaster",
    "plaster_pastedeploy",
    "setuptools < 82",  # require pkg_resources
    "translationstring >= 0.4",  # py3 compat
    "venusian >= 1.0",  # ``ignore``
    "webob >= 1.8.3",  # Accept.parse_offer
    "zope.deprecation >= 3.5.0",  # py3 compat
    "zope.interface >= 3.8.0",  # has zope.interface.registry
]

keywords = ["web", "wsgi", "pylons", "pyramid"]
classifiers = [
        "Development Status :: 6 - Mature",
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Framework :: Pyramid",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: WSGI",
]

[project.scripts]
pserve = "pyramid.scripts.pserve:main"
pshell = "pyramid.scripts.pshell:main"
proutes = "pyramid.scripts.proutes:main"
pviews = "pyramid.scripts.pviews:main"
ptweens = "pyramid.scripts.ptweens:main"
prequest = "pyramid.scripts.prequest:main"
pdistreport = "pyramid.scripts.pdistreport:main"

[project.entry-points."paste.server_runner"]
wsgiref = "pyramid.scripts.pserve:wsgiref_server_runner"
cherrypy = "pyramid.scripts.pserve:cherrypy_server_runner"

[project.entry-points."pyramid.pshell_runner"]
python = "pyramid.scripts.pshell:python_shell_runner"

[project.urls]
Homepage = "https://trypyramid.com"
Repository = "https://github.com/Pylons/pyramid"
Issues = "https://github.com/Pylons/pyramid/issues"
Documentation = "https://docs.pylonsproject.org/projects/pyramid/en/2.1-branch/"
Changelog = "https://docs.pylonsproject.org/projects/pyramid/en/2.1-branch/whatsnew-2.1.html"

[project.optional-dependencies]
docs = [
    "sphinx >= 8",
    "docutils",
    "pylons-sphinx-themes >= 1.0.8",  # Ethical Ads
    "pylons_sphinx_latesturl",
    "repoze.sphinx.autointerface",
    "sphinx-copybutton",
    "sphinxcontrib-autoprogram",
]
testing = [
    "webtest >= 1.3.1",  # py3 compat
    "zope.component >= 4.0",  # py3 compat
    "coverage",
    "pytest >= 5.4.2",  # unittest.TestCase funkyness, see commit 77c1505ab
    "pytest-cov",
]

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''

# This next section only exists for people that have their editors
# automatically call isort.
[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]
skip_glob = ["docs/*"]
include_trailing_comma = true
force_grid_wrap = false
combine_as_imports = true
line_length = 79
force_sort_within_sections = true
no_lines_before = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "pyramid"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-W always"
testpaths = [
    "tests",
]

[tool.check-manifest]
ignore = [
    ".gitignore",
    ".gitattributes",
    "PKG-INFO",
    "*.egg-info",
    "*.egg-info/*",
    "setup.cfg",
]
ignore-default-rules = true
ignore-bad-ideas = "tests/pkgs/localeapp/**/*.mo"
