[easy_install]
zip_ok = false

[nosetests]
match = ^test
nocapture = 1

[aliases]
dev = develop easy_install pyramid[testing]
docs = develop easy_install pyramid[docs]

[metadata]
license_file = LICENSE.txt

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/pkgs/localeapp/**/*.mo
