[metadata]
license_file = LICENSE.txt

[check-manifest]
ignore =
    .gitignore
    .gitattributes
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/pkgs/localeapp/**/*.mo

[tool:pytest]
python_files = test_*.py
testpaths =
    tests
addopts = -W always
