[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0"
name = "tutorial"
authors = []
description = "tutorial"
readme = "README.md"
keywords = ["web", "pyramid", "pylons"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">=3.8"
dependencies = [
    "bcrypt",
    "docutils",
    "plaster_pastedeploy",
    "pyramid",
    "pyramid_chameleon",
    "pyramid_debugtoolbar",
    "waitress",
    "pyramid_retry",
    "pyramid_tm",
    "pyramid_zodbconn",
    "transaction",
    "ZODB",
]

[project.optional-dependencies]
testing = [
    "WebTest",
    "pytest",
    "pytest-cov",
]

[project.entry-points."paste.app_factory"]
main = "tutorial:main"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.coverage.run]
source = [
    "tutorial",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = [
    "tutorial",
    "tests",
]
